<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyAnimationMaker</string>
    <string name="title_activity_draw_frame">Draw the Frame</string>
    <string name="title_activity_launch_anim">Play Animation</string>
    <string name="chooser_label">Chooser</string>
    <string name="action_settings">Settings</string>
    <string name="frame_rate">Frame Rate in frames/second</string>
    <string name="length_secs">Animation length in Seconds</string>
    <string name="length_mins">Animation length in minutes</string>
    <string name="grid_limited">Allow more than 20 frames\n(not recommended)</string>
    <string name="repeat">Create repeating animation</string>
    <string name="enter_settings">Info</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="file_name">File Name</string>
    <string name="desc">Frame Number for Story Board</string>
    <string name="new_animation">New Project</string>
    <string name="open_animation">Project List.</string>
    <string name="build_animation">Build Animated GIF</string>
    <string name="launch_animation">Play Animation</string>
    <string name="email_gif">Email Gif</string>
    <string name="about">About</string>
    <string name="open_thumbs">Open Thumbnails</string>
    <string name="open_slider">Open Slider</string>
    <string name="open_file_message">Projects</string>
    <string name="memory_dialog_message">Memory Message</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- The intro about info -->
    <string name="about_my_animation">With MyAnimationMaker
	    you set the frame rate in frames per second and the 
	    length of the animation in seconds.\n\nTap the frame or the thumbnail to draw the animation frame.\n\nLimit the number of times you save a drawing, each time you reopen and save out the drawing
        the quality deteriorates.\n\nDue to memory constraints we highly recommend that you keep your animation to less than 20 frames,
        we have provided a check box that will allow more than 20 frames, but MyAnimationMaker could become unstable.</string>

    <string name="memory_message">Some animated gifs require more memory than is available.\n\n
        The player will not load those frames that would exceed the available memory to avoid an out of memory error.\n\n
        To view a gif that exceeds this displayer\'s ability to display, email the gif to yourself and view it in a web browser.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- Draw Frame Strings -->
    <string name="cancel_frame">Cancel frame</string>
    <string name="save_frame">Save Frame</string>
    <string name="discard_last_draw">Discard last Draw</string>
    <string name="redo_last_draw">Redo last Draw</string>
    <string name="save_close_frame">Save Frame and Back</string>
    <string name="line_color">Line Color</string>
    <string name="used_colors">Previous Colors Used</string>
    <string name="line_width">Line Width</string>
    <string name="set_background_image">Set Background Image</string>
    <string name="choose_file">Choose File</string>
    <string name="prev_frame">Show previous frame</string>
    <string name="hide_previous_frame">Hide previous frame</string>
    <string name="eraser">Eraser</string>
    
    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="done">Done</string>
    <string name="press_color_to_apply">Hex Code</string>
    <string name="hex">#ff000000</string>
    <string name="arrow">-></string>
    <string name="previous_color">Previous Color</string>
    <string name="new_color">Selected Color</string>
    <string name="determine_new_color">Bottom Slider is Transparency, Right Slider is hue, Select from large Field.</string>
    
    <!-- Line type -->
    <string name="line_type">Line Type</string>
    <string name="solid">Solid</string>
    <string name="airbrush">Air Brush</string>
    
    <!-- Line width -->
    <string name="default_line_width">10</string>
    <string name="enter_line_width">Enter Line Width in Pixels, 0 to 300, 0 is hairline.</string>

    <!-- Eraser Width -->
    <string name="enter_eraser_width">Set Eraser Width in Pixels, 0 to 300, 0 is hairline</string>
    
    <!-- previous frame strings -->

    
    <!-- Gif player strings -->
    <string  name="close_player">Close Player</string>
    <string name="stop_player">Stop Player</string>
    <string name="start_player">Start Player</string>
    
    <!-- ImageSizeDialogFragment strings -->
    <string name="image_height">Image Height</string>
    <string name="image_width">Image Width</string>
    <string name="max_size">Hints indicate screen sizes in pixels.</string>
    <string name="image_height_title">Set image height,       default is the screen height</string>
    <string name="image_width_title">Set image width,       default is screen width</string>
    <string name="test">test</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_animation_setttings">\u0020 Animation Settings</string>

    <string name="over_write_title_text">Over Write Project?</string>
    <string name="write_title_text">Create new Project?</string>
    <!-- over_write_directory.xml -->
    <string name="over_write">This Project already exists.
	    By clicking "OK", the project and all files in it
	    will be deleted!  Do you wish to continue?</string>
    <string name="write_project">By clicking "OK", you will make a new project</string>

    <!-- on back pressed strings -->
    <string name="on_back_pressed_title_text">Really Exit?</string>
    <string name="on_back_pressed_body_text">Exit the Frame Slider?</string>

</resources>
