<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_text"
    android:orientation="vertical"
    tools:context="com.bniproductions.android.myanimationmaker.ActivityAnimationSettings">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_layout"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/exceed_20_frames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/paddding_left_about_text"
                android:paddingRight="@dimen/padding_right_about_text"
                android:paddingTop="@dimen/padding_top_settings">

                <CheckBox
                    android:id="@+id/grid_limited_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/activity_background" />

                <TextView
                    android:id="@+id/text_20_frames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/grid_limited_checkbox"
                    android:text="@string/grid_limited"
                    android:textColor="@color/activity_background" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/allow_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/exceed_20_frames"
                android:paddingLeft="@dimen/paddding_left_about_text"
                android:paddingRight="@dimen/padding_right_about_text">

                <CheckBox
                    android:id="@+id/repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/activity_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/repeat"
                    android:paddingTop="@dimen/repeat_anim_top_buffer"
                    android:text="@string/repeat"
                    android:textColor="@color/activity_background" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/allow_repeat"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/file_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/file_name"
                    android:inputType="text"
                    android:paddingLeft="@dimen/paddding_left_about_text"
                    android:paddingRight="@dimen/padding_right_about_text">

                    <requestFocus />
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/frame_rate_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_layout"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/frame_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_input_layout"
                    android:hint="@string/frame_rate"
                    android:inputType="number"
                    android:paddingLeft="@dimen/paddding_left_about_text"
                    android:paddingRight="@dimen/padding_right_about_text"></EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/animation_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frame_rate_wrapper"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/animation_length_secs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/frame_rate"
                    android:hint="@string/length_secs"
                    android:inputType="number"
                    android:paddingLeft="@dimen/paddding_left_about_text"
                    android:paddingRight="@dimen/padding_right_about_text"></EditText>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/image_height_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/animation_length"
                android:paddingLeft="@dimen/paddding_left_about_text"
                android:paddingRight="@dimen/padding_right_about_text"
                android:text="@string/image_height_title"
                android:textColor="@color/activity_background"
                android:textSize="14sp"></TextView>

            <EditText
                android:id="@+id/image_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_height_title"
                android:inputType="number"
                android:paddingLeft="@dimen/paddding_left_about_text"
                android:paddingRight="@dimen/padding_right_about_text"
                android:textColor="@color/activity_background"
                android:theme="@style/TextLabel"></EditText>

            <TextView
                android:id="@+id/image_width_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_height"
                android:paddingLeft="@dimen/paddding_left_about_text"
                android:paddingRight="@dimen/padding_right_about_text"
                android:text="@string/image_width_title"
                android:textColor="@color/activity_background"
                android:textSize="14sp"></TextView>

            <EditText
                android:id="@+id/image_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_width_title"
                android:inputType="number"
                android:paddingLeft="@dimen/paddding_left_about_text"
                android:paddingRight="@dimen/padding_right_about_text"
                android:textColor="@color/activity_background"
                android:textCursorDrawable="@color/activity_background"
                android:theme="@style/TextLabel"></EditText>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:background="@color/activity_background"
            android:text="@string/cancel"
            android:textColor="@color/activity_text" />

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:background="@color/activity_background"
            android:text="@string/create"
            android:textColor="@color/activity_text" />
    </LinearLayout>
</RelativeLayout>
